<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="16dp">

    <ImageView
        android:id="@+id/image_title"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:src="@drawable/logo_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout_login_email"
        android:contentDescription="@string/story_app_logo" />

    <com.seftian.storyapp.ui.components.TextInputLayoutCustom
        android:id="@+id/layout_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/email"
        app:validationType="EMAIL"
        app:errorEnabled="true"
        app:boxCornerRadiusBottomEnd="4dp"
        app:boxCornerRadiusBottomStart="4dp"
        app:boxCornerRadiusTopEnd="4dp"
        app:boxCornerRadiusTopStart="4dp"
        app:boxStrokeColor="@color/secondaryBlue"
        app:layout_constraintBottom_toTopOf="@+id/layout_login_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_title"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/primaryBlue">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:minLines="1"
            android:scrollHorizontally="true"
            />
    </com.seftian.storyapp.ui.components.TextInputLayoutCustom>

    <com.seftian.storyapp.ui.components.TextInputLayoutCustom
        android:id="@+id/layout_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/password"
        android:layout_marginTop="16dp"
        app:passwordToggleEnabled="true"
        app:minLength="8"
        app:validationType="PASSWORD"
        app:errorEnabled="true"
        app:boxCornerRadiusBottomEnd="4dp"
        app:boxCornerRadiusBottomStart="4dp"
        app:boxCornerRadiusTopEnd="4dp"
        app:boxCornerRadiusTopStart="4dp"
        app:boxStrokeColor="@color/secondaryBlue"
        app:layout_constraintEnd_toEndOf="@id/layout_login_email"
        app:layout_constraintStart_toStartOf="@id/layout_login_email"
        app:layout_constraintTop_toBottomOf="@+id/layout_login_email"
        app:startIconDrawable="@drawable/ic_key"
        app:startIconTint="@color/primaryBlue">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:minLines="1"
            />
    </com.seftian.storyapp.ui.components.TextInputLayoutCustom>
    
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:text="@string/login"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@id/layout_login_password"
        app:layout_constraintEnd_toEndOf="@id/layout_login_password"
        app:layout_constraintStart_toStartOf="@id/layout_login_password"
        />

    <TextView
        android:id="@+id/btn_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/primaryBlue"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="@id/btn_login"
        app:layout_constraintTop_toBottomOf="@id/btn_login"

        />

</androidx.constraintlayout.widget.ConstraintLayout>