<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.signup.SignUpActivity">

    <TextView
        android:id="@+id/tv_title_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/primaryBlue"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.seftian.storyapp.ui.components.TextInputLayoutCustom
        android:id="@+id/layout_register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/name"
        android:layout_marginTop="30dp"
        app:errorEnabled="true"
        app:validationType="NOTHING"
        app:boxCornerRadiusBottomEnd="4dp"
        app:boxCornerRadiusBottomStart="4dp"
        app:boxCornerRadiusTopEnd="4dp"
        app:boxCornerRadiusTopStart="4dp"
        app:boxStrokeColor="@color/secondaryBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_signup"
        app:startIconDrawable="@drawable/ic_person"
        app:startIconTint="@color/primaryBlue">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:minLines="1"
            android:scrollHorizontally="true"
            />
    </com.seftian.storyapp.ui.components.TextInputLayoutCustom>

    <com.seftian.storyapp.ui.components.TextInputLayoutCustom
        android:id="@+id/layout_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/email"
        app:validationType="EMAIL"
        app:errorEnabled="true"
        app:boxCornerRadiusBottomEnd="4dp"
        app:boxCornerRadiusBottomStart="4dp"
        app:boxCornerRadiusTopEnd="4dp"
        app:boxCornerRadiusTopStart="4dp"
        app:boxStrokeColor="@color/secondaryBlue"
        app:layout_constraintEnd_toEndOf="@id/layout_register_name"
        app:layout_constraintStart_toStartOf="@id/layout_register_name"
        app:layout_constraintTop_toBottomOf="@id/layout_register_name"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/primaryBlue">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:minLines="1"
            android:scrollHorizontally="true"
            />
    </com.seftian.storyapp.ui.components.TextInputLayoutCustom>

    <com.seftian.storyapp.ui.components.TextInputLayoutCustom
        android:id="@+id/layout_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/password"
        app:passwordToggleEnabled="true"
        app:minLength="8"
        app:validationType="PASSWORD"
        app:errorEnabled="true"
        app:boxCornerRadiusBottomEnd="4dp"
        app:boxCornerRadiusBottomStart="4dp"
        app:boxCornerRadiusTopEnd="4dp"
        app:boxCornerRadiusTopStart="4dp"
        app:boxStrokeColor="@color/secondaryBlue"
        app:layout_constraintEnd_toEndOf="@id/layout_register_email"
        app:layout_constraintStart_toStartOf="@id/layout_register_email"
        app:layout_constraintTop_toBottomOf="@id/layout_register_email"
        app:startIconDrawable="@drawable/ic_key"
        app:startIconTint="@color/primaryBlue">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:minLines="1"
            />
    </com.seftian.storyapp.ui.components.TextInputLayoutCustom>

    <com.seftian.storyapp.ui.components.TextInputLayoutCustom
        android:id="@+id/layout_register_password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/repeat_password"
        app:passwordToggleEnabled="true"
        app:minLength="8"
        app:validationType="NOTHING"
        app:errorEnabled="true"
        app:boxCornerRadiusBottomEnd="4dp"
        app:boxCornerRadiusBottomStart="4dp"
        app:boxCornerRadiusTopEnd="4dp"
        app:boxCornerRadiusTopStart="4dp"
        app:boxStrokeColor="@color/secondaryBlue"
        app:layout_constraintEnd_toEndOf="@id/layout_register_password"
        app:layout_constraintStart_toStartOf="@id/layout_register_password"
        app:layout_constraintTop_toBottomOf="@id/layout_register_password"
        app:startIconDrawable="@drawable/ic_key"
        app:startIconTint="@color/primaryBlue">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_register_password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:minLines="1"
            />
    </com.seftian.storyapp.ui.components.TextInputLayoutCustom>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_signup"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:text="@string/sign_up"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@id/layout_register_password2"
        app:layout_constraintEnd_toEndOf="@id/layout_register_password2"
        app:layout_constraintStart_toStartOf="@id/layout_register_password2"
        />

</androidx.constraintlayout.widget.ConstraintLayout>